@@ -1,5 +1,10 @@
 2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>
 
+        * src/tclblend/tcl/lang/Interp.java (evalFile):
+        Add TclBlend implementation of Interp.evalFile().
+
+2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>
+
         * src/jacl/tcl/lang/ExecCmd.java (cmdProc):
         Reimplement JDK 1.3 and newer exec so that two
         threads are created. One reads stdout of the
